--- a/index.html
+++ b/index.html
@@ -168,8 +168,28 @@
     <!-- footer -->
 
     <section id="footer">
-        <img src="FilohaMpanatanterakaMamyRasolofondraibe.jpg" class="footer-img">
-        <!-- <img src="PasteurAlainDeNeriAndrianantenaina.jpg" class="footer-img"> -->
+       
+<!-- nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn -->
+
+
+
+
+<div class="cube">
+    <div class="side" id="front"></div>
+    <div class="side" id="bottom"></div>
+    <div class="side" id="top"></div>
+    <div class="side" id="left"></div>
+    <div class="side" id="right"></div>
+    <div class="side" id="back"></div>
+</div>
+
+<!-- nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn -->
+
+
+
+
+
+     
         <div class="title-text">
             <p>CONTACT</p>
             <h1>`</h1>
