--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <section id="banner">
-        <img src="WCMdef.png" class="logo" alt="">
+        <img src="images/WCMdef.png" class="logo" alt="">
         <div class="banner-text">
-            <h1>Water Cup Madagascar </h1>
-            <p>Amboaram-Pokonolon'ny Rano</p>
+            <h1>Amboaram-Pokonolon'ny Rano</h1>
+            <p>Water Cup Madagascar </p>
             <div class="banner-btn">
                 <a href="#"><span></span>Faire un Don</a>
                 <a href="#"><span></span>Nous contacter</a>
@@ -24,22 +24,34 @@
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="#">Ambovombe</a></li>
-                <li><a href="#">Itasy</a></li>
-                <li><a href="#">Ankazobe</a></li>
-                <li><a href="#">Vakinankaratra</a></li>
+                <li><a href="index1.html">Ambovombe</a></li>
+                <li><a href="index2.html">Itasy</a></li>
+                <li><a href="index3.html">Ankazobe</a></li>
+                <li><a href="index4.html">Mahajanga</a></li>
+                <li><a href="index5.html">Fianarantsoa</a></li>
+                <li><a href="index6.html">Vakinankaratra</a></li>
+                <li><a href="index7.html">Diego</a></li>
+                <li><a href="index8.html">Analamanga</a></li>
+                <li><a href="index9.html">Tuléar</a></li>
+                <li><a href="index10.html">Moramanga</a></li>
             </ul>
         </nav>
     </div>
     <div id="menuBtn">
-        <img src="menu4.jpg" id="menu">
+        <img src="images/menu4.jpg" id="menu">
 
         <!-- Features -->
     </div>
     <section id="feature">
         <div class="title-text">
             <p>MPITARIKA</p>
+            <br>
+            <br>
+            <br>
             <h1>Mamy Rasolofondrainibe</h1>
+            <br>
+            <br>
+            <br>
         </div>
         <div class="feature-box">
             <div class="features">
@@ -73,7 +85,7 @@
                 </div>
             </div>
             <div class="features-img">
-                <img src="FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
+                <img src="images/FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
             </div>
         </div>
     </section>
@@ -81,12 +93,15 @@
     <!-- services -->
     <section id="service">
         <div class="title-text">
-            <p>MPANDRINDRA</p>
+            <p></p>
             <h1>Mpanampy</h1>
+            <br>
+            <br>
+            <br>
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="MmeLantoniainaRazafindramiadana.jpg" >
+                <img src="images/MmeLantoniainaRazafindramiadana.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lantoniaina Razafindramiadana</h3>
@@ -95,7 +110,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeLeaFanihia.jpg" >
+                <img src="images/MmeLeaFanihia.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lea Fanihia</h3>
@@ -104,7 +119,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
+                <img src="images/MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Rabakoharinanjanahary Clarisse</h3>
@@ -113,7 +128,16 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeTianaAndriatsimijay.jpg" >
+                <img src="BenjaAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Mr BenjaAPR1</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="images/MmeTianaAndriatsimijay.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Tiana Andriatsimijay</h3>
@@ -128,36 +152,40 @@
 
     <section id="testimonial">
         <div class="title-text">
+            
             <p>Témoignages</p>
+            <br>
+            <br>
+            <br>
             <h1>Les gens parlent de nous</h1>
         </div>
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="VeroRAKOTOMALALA.jpg" >
+                    <img src="images/VeroRAKOTOMALALA.jpg" >
                     <div class="user-info">
-                        <h4>Vero RAKOTOMALALA <i class='fa fa-twitter'></i></h4>
-                        <small>@norman</small>
+                        <h4>Vero RAKOTOMALALA <i class='fa fa-facebook'></i></h4>
+                        <small>@fb</small>
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quis perferendis reprehenderit vero dolorem iure quaerat assumenda, distinctio eaque ab!</p>
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="LalàMoto.jpg" >
+                    <img src="images/LalàMoto.jpg" >
                     <div class="user-info">
-                        <h4>Lalà MOTO <i class='fa fa-twitter'></i></h4>
-                        <small>@norman</small>
+                        <h4>Lalà MOTO <i class='fa fa-facebook'></i></h4>
+                        <small>@fb</small>
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit ipsam aliquam voluptates reprehenderit quo amet est et animi asperiores quisquam eos non, fugit ad blanditiis consequuntur tenetur a deleniti, modi nam quae cumque odit! Cumque nostrum a perspiciatis laudantium blanditiis.</p>
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="AinaRABARY.jpg" >
+                    <img src="images/AinaRABARY.jpg" >
                     <div class="user-info">
-                        <h4>Aina RABARY <i class='fa fa-twitter'></i></h4>
-                        <small>@norman</small>
+                        <h4>Aina RABARY <i class='fa fa-facebook'></i></h4>
+                        <small>@fb</small>
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quis perferendis reprehenderit vero dolorem iure quaerat assumenda, distinctio eaque ab!</p>
@@ -212,7 +240,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-youtube-play"></i>
-            <p>Copyright  @2022 Water Cup Madagascar </p>
+            <p> Copyright © 2022 - Water Cup Madagascar </p>
         </div>
     </section>
     <script src="main.js"></script>
