--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="index1.html">Ambovombe</a></li>
+                  <li><a href="index1.html">Ambohimandroso</a></li>
                 <li><a href="index2.html">Itasy</a></li>
                 <li><a href="index3.html">Ankazobe</a></li>
                 <li><a href="index4.html">Mahajanga</a></li>
@@ -85,7 +86,7 @@
                 </div>
             </div>
             <div class="features-img">
-                <img src="images/FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
+                <img src="FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
             </div>
         </div>
     </section>
@@ -101,7 +102,7 @@
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="images/MmeLantoniainaRazafindramiadana.jpg" >
+                <img src="MmeLantoniainaRazafindramiadana.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lantoniaina Razafindramiadana</h3>
@@ -110,7 +111,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="images/MmeLeaFanihia.jpg" >
+                <img src="MmeLeaFanihia.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lea Fanihia</h3>
@@ -119,7 +120,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="images/MmeRabakoharinanjanaharyClarisse.jpg" >
+                <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Rabakoharinanjanahary Clarisse</h3>
@@ -137,7 +138,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="images/MmeTianaAndriatsimijay.jpg" >
+                <img src="MmeTianaAndriatsimijay.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Tiana Andriatsimijay</h3>
@@ -162,7 +163,7 @@
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/VeroRAKOTOMALALA.jpg" >
+                    <img src="VeroRAKOTOMALALA.jpg" >
                     <div class="user-info">
                         <h4>Vero RAKOTOMALALA <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -172,7 +173,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/LalàMoto.jpg" >
+                    <img src="LalàMoto.jpg" >
                     <div class="user-info">
                         <h4>Lalà MOTO <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -182,7 +183,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/AinaRABARY.jpg" >
+                    <img src="AinaRABARY.jpg" >
                     <div class="user-info">
                         <h4>Aina RABARY <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
