--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <ul>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="index1.html">Ambovombe</a></li>
-                  <li><a href="index1.html">Ambohimandroso</a></li>
                 <li><a href="index2.html">Itasy</a></li>
                 <li><a href="index3.html">Ankazobe</a></li>
                 <li><a href="index4.html">Mahajanga</a></li>
@@ -86,7 +85,7 @@
                 </div>
             </div>
             <div class="features-img">
-                <img src="FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
+                <img src="images/FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
             </div>
         </div>
     </section>
@@ -102,7 +101,7 @@
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="MmeLantoniainaRazafindramiadana.jpg" >
+                <img src="images/MmeLantoniainaRazafindramiadana.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lantoniaina Razafindramiadana</h3>
@@ -111,7 +110,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeLeaFanihia.jpg" >
+                <img src="images/MmeLeaFanihia.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lea Fanihia</h3>
@@ -120,7 +119,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
+                <img src="images/MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Rabakoharinanjanahary Clarisse</h3>
@@ -132,13 +131,22 @@
                 <img src="BenjaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Mr BenjaAPR1</h3>
+                    <h3>Mr Benja APR1</h3>
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
             </div>
             <div class="single-service">
-                <img src="MmeTianaAndriatsimijay.jpg" >
+                <img src="ArmelleAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Mr Armelle APR1</h3>
+                    <hr>
+                    <p>" Olan'ny rano amin'ny famokarana ve? Ny CCT no vahaolana mahomby."</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="images/MmeTianaAndriatsimijay.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Tiana Andriatsimijay</h3>
@@ -163,7 +171,7 @@
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="VeroRAKOTOMALALA.jpg" >
+                    <img src="images/VeroRAKOTOMALALA.jpg" >
                     <div class="user-info">
                         <h4>Vero RAKOTOMALALA <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -173,7 +181,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="LalàMoto.jpg" >
+                    <img src="images/LalàMoto.jpg" >
                     <div class="user-info">
                         <h4>Lalà MOTO <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -183,7 +191,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="AinaRABARY.jpg" >
+                    <img src="images/AinaRABARY.jpg" >
                     <div class="user-info">
                         <h4>Aina RABARY <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
