--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </div>
     <div id="menuBtn">
-        <img src="images/menu4.jpg" id="menu">
+        <img src="menu4.jpg" id="menu">
 
         <!-- Features -->
     </div>
