--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="banner">
-        <img src="images/WCMdef.png" class="logo" alt="">
+        <img src="WCMdef.png" class="logo" alt="">
         <div class="banner-text">
             <h1>Amboaram-Pokonolon'ny Rano</h1>
             <p>Water Cup Madagascar </p>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="features-img">
-                <img src="images/FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
+                <img src="FilohaMpanatanterakaMamyRasolofondraibe.jpg" alt="">
             </div>
         </div>
     </section>
@@ -101,7 +101,7 @@
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="images/MmeLantoniainaRazafindramiadana.jpg" >
+                <img src="MmeLantoniainaRazafindramiadana.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lantoniaina Razafindramiadana</h3>
@@ -109,8 +109,18 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
             </div>
+        <div class="service-box">
             <div class="single-service">
-                <img src="images/MmeLeaFanihia.jpg" >
+                <img src="HanitriniainaAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Hanitriniaina APR1</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="MmeLeaFanihia.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Lea Fanihia</h3>
@@ -119,7 +129,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="images/MmeRabakoharinanjanaharyClarisse.jpg" >
+                <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Rabakoharinanjanahary Clarisse</h3>
@@ -146,7 +156,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="images/MmeTianaAndriatsimijay.jpg" >
+                <img src="MmeTianaAndriatsimijay.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Mme Tiana Andriatsimijay</h3>
@@ -171,7 +181,7 @@
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/VeroRAKOTOMALALA.jpg" >
+                    <img src="VeroRAKOTOMALALA.jpg" >
                     <div class="user-info">
                         <h4>Vero RAKOTOMALALA <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -181,7 +191,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/LalàMoto.jpg" >
+                    <img src="LalàMoto.jpg" >
                     <div class="user-info">
                         <h4>Lalà MOTO <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
@@ -191,7 +201,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="images/AinaRABARY.jpg" >
+                    <img src="AinaRABARY.jpg" >
                     <div class="user-info">
                         <h4>Aina RABARY <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
