--- a/index.html
+++ b/index.html
@@ -132,12 +132,33 @@
             </div>
       
             <div class="single-service">
+                <img src="FereronAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Fereron APR1</h3>
+                    <hr>
+                    <p>Ho tontolo maintso sy ho tany lonaka I madagasikara! Izaho sy ianao miara-mienatana no hoavin'ny taranaka mifandimby! Ndao ary!!!</p>
+                </div>
+            </div>
+        </div>
+        <div class="service-box">
+            <div class="single-service">
                 <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Mme Rabakoharinanjanahary Clarisse</h3>
+                    <h3>MmeRabakoharinanjanaharyClarisse</h3>
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                </div>
+            </div>
+      
+            <div class="single-service">
+                <img src="MamyRazanakolonaAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Mamy Razanakolona</h3>
+                    <hr>
+                    <p>Ho tontolo lovain'ny taranaka andao hiaray vina,, hifanome tanana ka fitaovana sy ampinga ny firaisankina</p>
                 </div>
             </div>
         </div>
@@ -230,7 +251,7 @@
                         <small>@fb</small>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quis perferendis reprehenderit vero dolorem iure quaerat assumenda, distinctio eaque ab!</p>
+                <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quis perferendis reprehenderit vero dolorem iure quaerat assumenda, distinctio eaque ab!"</p>
             </div>
             <div class="testimonial-col">
                 <div class="user">
@@ -245,13 +266,13 @@ Amboara-pokonolon'ny rano ho an'ny taninjanaka."</p>
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="AinaRABARY.jpg" >
+                    <img src="AinaAPR1.jpg" >
                     <div class="user-info">
                         <h4>Aina RABARY <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quis perferendis reprehenderit vero dolorem iure quaerat assumenda, distinctio eaque ab!</p>
+                <p>"Ny fananana tany lonaka midadasika sy ny fandrosoan'ny fambolena ary ny fananana rano fisotro madio dia toko telo ho fanarenana ny firenena. Ny APR na ny Amboaram- Pokonolon' ny Rano, andikana ny hoe Water cup Madagasikara, dia tetikasa iray manana izany vina izany. Koa ndao hiaraka, ento ny anjara birikinao, fa izay tsy mahay sobika, mahay fatam-bary."</p>
             </div>
         </div>
     </section>
