--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 <div class="service-desc">
                     <h3>Hanitriniaina APR1</h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                    <p>"Tontolo maintso mivoatra, Madagasikara mandroso, lavitry ny hai-tany.Tokana ny lalana ahatongavana amin'izany tanjona izany: dia ny CCT.
+                        NDAO ary hira- hientana isika rehetra hanatanteraka ny vina."</p>
                 </div>
             </div>
         </div>
@@ -257,7 +258,7 @@
                 <div class="user">
                     <img src="LalàMoto.jpg" >
                     <div class="user-info">
-                        <h4>Lalà MOTO <i class='fa fa-facebook'></i></h4>
+                        <h4>Lalà RASANJISON  <i class='fa fa-facebook'></i></h4>
                         <small>@fb</small>
                     </div>
                 </div>
