--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
          <div class="service-box">
             <div class="single-service">
-                <img src="hajasyNathaAPR1.jpg" >
+                <img src="HajasyNathaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>hajasyNathaAPR1</h3>
