--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
 
         <!-- Features -->
     </div>
+<!-- ::::::::::: -->
+<div class="pimg">
+
+    <div class="ptext"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+</div>
+
+
+
+
+
+<!-- ::::::::::: -->
+
+
+
+
     <section id="feature">
         <div class="title-text">
             <p>MPITARIKA</p>
@@ -89,6 +104,16 @@
             </div>
         </div>
     </section>
+<!-- :::::: -->
+<div class="pimg">
+
+    <div class="ptext"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+</div>
+
+
+<!-- :::::: -->
+
+
 
     <!-- services -->
     <section id="service">
@@ -166,7 +191,7 @@
 
          <div class="service-box">
             <div class="single-service">
-                <img src="HajasyNathaAPR1.jpg" >
+                <img src="hajasyNathaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>hajasyNathaAPR1</h3>
