--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <i class="fa fa-shield"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quas.</p>
+                        <p>Ho an'ny Tanindrazana sy ho an'ny Filazantsara.</p>
                     </div>
                 </div>
                 <h1>Les Objectifs du Water Cup Madagascar</h1>
@@ -90,7 +90,12 @@
                     <i class="fa fa-check-square-o"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quas.</p>
+                        <ul>
+                            <li>Sensibiliser la nation toute entière et ses forces vives notamment les villageois sur l'adoption de la technique "Continuous Contour Trenches" ou "CCT"</li>
+                            <li>Appuyer techniquement et appuyer les villageois (Fokonolona) dans la mise en oeuvre de la CCT</li>
+                            <li>Organiser la compétition entre villages sur le "Water Cup Madagascar</li>
+                            <li>Partager et organiser nos connaissances et nos compétences pour le développement durable de Madagascar</li>
+                        </ul>
                     </div>
                 </div>
                 <h1>Les Devises du Water Cup Madagascar</h1>
@@ -99,7 +104,7 @@
                         <i class="fa fa-inr"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, quas.</p>
+                        <p>Honnêteté, Intégrité, Authenticité</p>
                     </div>
                 </div>
             </div>
@@ -381,9 +386,9 @@ Amboara-pokonolon'ny rano ho an'ny taninjanaka."</p>
             </div>
             <div class="footer-right">
                 <h1>Venir nous voir</h1>
-                <p><i class="fa fa-map-marker"></i>3 rue pierre brossolette, Yerres</p>
-                <p><i class="fa fa-paper-plane"></i>example@website.com</p>
-                <p><i class="fa fa-phone"></i>06 52 52 52 52</p>
+                <p><i class="fa fa-map-marker"></i>53 rue pierre brossolette, Yerres, FRANCE</p>
+                <p><i class="fa fa-paper-plane"></i>ramananasy@yahoo.com</p>
+                <p><i class="fa fa-phone"></i>00 33 6 52 93 90 90 et whatsapp</p>
             </div>
         </div>
         <div class="social-links">
