--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
         </div>
          <div class="service-box">
             <div class="single-service">
-                <img src="MamytoynyTantelyAPR1.jpg" >
+                <img src="RijanavalonaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>MamytoynyTantelyAPR1</h3>
+                    <h3>RijanavalonaAPR1</h3>
                     <hr>
-                    <p>" Olan'ny rano amin'ny famokarana ve? Ny CCT no vahaolana mahomby."</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
             </div>
 
@@ -267,12 +267,22 @@
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="RijanavalonaAPR1.jpg" >
+                <img src="MamytoynyTantelyAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>RijanavalonaAPR1</h3>
+                    <h3>MamytoynyTantelyAPR1</h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                    <p>" Olan'ny rano amin'ny famokarana ve? Ny CCT no vahaolana mahomby."</p>
+                </div>
+            </div>
+
+            <div class="single-service">
+                <img src="MamyRamalanjaonaAndrianjatovoAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Mamy Andrianjatovo Ramalanjaona</h3>
+                    <hr>
+                    <p>" Olan'ny rano amin'ny famokarana ve? Ny CCT no vahaolana mahomby."</p>
                 </div>
             </div>
            
