--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>WaterCupMada1</title>
 </head>
@@ -93,7 +96,7 @@
                         <ul>
                             <li>Sensibiliser la nation toute entière et ses forces vives notamment les villageois sur l'adoption de la technique "Continuous Contour Trenches" ou "CCT"</li>
                             <li>Appuyer techniquement et appuyer les villageois (Fokonolona) dans la mise en oeuvre de la CCT</li>
-                            <li>Organiser la compétition entre villages sur le "Water Cup Madagascar</li>
+                            <li>Organiser la compétition entre villages sur le "Water Cup Madagascar"</li>
                             <li>Partager et organiser nos connaissances et nos compétences pour le développement durable de Madagascar</li>
                         </ul>
                     </div>
@@ -141,7 +144,7 @@
                 <img src="MmeLantoniainaRazafindramiadana.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Mme Lantoniaina Razafindramiadana</h3>
+                    <h3>Mme Lantoniaina RAZAFINDRAMIADANA </h3>
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
@@ -151,7 +154,7 @@
                 <img src="HanitriniainaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Hanitriniaina APR1</h3>
+                    <h3>Mme RALISOAMANARIVO Hanitriniaina</h3>
                     <hr>
                     <p>"Tontolo maintso mivoatra, Madagasikara mandroso, lavitry ny hai-tany.Tokana ny lalana ahatongavana amin'izany tanjona izany: dia ny CCT.
                         NDAO ary hira- hientana isika rehetra hanatanteraka ny vina."</p>
@@ -163,7 +166,7 @@
                 <img src="MmeLeaFanihia.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Mme Lea Fanihia</h3>
+                    <h3>Mme Lea FANIHIA </h3>
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
@@ -173,7 +176,7 @@
                 <img src="FereronAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Fereron APR1</h3>
+                    <h3>Fereron RANDRUS</h3>
                     <hr>
                     <p>Ho tontolo maintso sy ho tany lonaka I madagasikara! Izaho sy ianao miara-mienatana no hoavin'ny taranaka mifandimby! Ndao ary!!!</p>
                 </div>
@@ -184,9 +187,9 @@
                 <img src="MmeRabakoharinanjanaharyClarisse.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>MmeRabakoharinanjanaharyClarisse</h3>
+                    <h3>Mme Clarisse RABAKOHARINANJANAHARY </h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                    <p>Ndao ary e</p>
                 </div>
             </div>
       
@@ -194,7 +197,7 @@
                 <img src="MamyRazanakolonaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>Mamy Razanakolona</h3>
+                    <h3>Mamy RAZANAKOLONA </h3>
                     <hr>
                     <p>Ho tontolo lovain'ny taranaka andao hiaray vina,, hifanome tanana ka fitaovana sy ampinga ny firaisankina</p>
                 </div>
@@ -206,7 +209,7 @@
                 <img src="HajasyNathaAPR1.jpg" >
                 <div class="overlay"></div>
                 <div class="service-desc">
-                    <h3>hajasyNathaAPR1</h3>
+                    <h3>Ony Niaina Nathalie RAHARIMANANA </h3>
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
                 </div>
@@ -250,7 +253,7 @@
                 <div class="service-desc">
                     <h3>RijanavalonaAPR1</h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                    <p>"Ndao hiara-mientana hiady amin'ny tsy fahampian-drano"</p>
                 </div>
             </div>
 
@@ -260,7 +263,7 @@
                 <div class="service-desc">
                     <h3>Avotra APR1</h3>
                     <hr>
-                    <p>" Olan'ny rano amin'ny famokarana ve? Ny CCT no vahaolana mahomby."</p>
+                    <p>"Edena vaovao Madagasikara, tany lonaka sy maitso lovain'ny taranaka"</p>
                 </div>
             </div>
      
