--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="feature-text">
                         <ul>
                             <li>Sensibiliser la nation toute entière et ses forces vives notamment les villageois sur l'adoption de la technique "Continuous Contour Trenches" ou "CCT"</li>
-                            <li>Appuyer techniquement et appuyer les villageois (Fokonolona) dans la mise en oeuvre de la CCT</li>
+                            <li>Appuyer techniquement et accompagner les villageois (Fokonolona) dans la mise en oeuvre de la CCT</li>
                             <li>Organiser la compétition entre villages sur le "Water Cup Madagascar"</li>
                             <li>Partager et organiser nos connaissances et nos compétences pour le développement durable de Madagascar</li>
                         </ul>
@@ -119,10 +119,10 @@
 <!-- :::::: -->
 <div class="pimg">
 
-    <div class="ptext"><br><br><br><br><br><br><br><br><br>
+    <div class="ptext"><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <p> 'CCT' : Continuous Contour Trenches</p>
         
-        <br><br><br><br><br><br><br><br><br></div>
+        <br><br><br><br><br><br><br><br><br></div><br><br><br><br>
 </div>
 
 
