--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                 <div class="service-desc">
                     <h3>Ony Niaina Nathalie RAHARIMANANA </h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda at alias fugiat aut.</p>
+                    <p>Antsika i Madagasikara, fonenana iombonana
+                        Andao hiaraka andonaka ny Nosintsika mba ho lasa tany mamokatra ho lovain'ny taranaka</p>
                 </div>
             </div>
        
