--- a/index.html
+++ b/index.html
@@ -291,6 +291,28 @@
             </div>
            
         </div>
+        <div class="service-box">
+            <div class="single-service">
+                <img src="HuygenIdaAPR1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Ida HUYGEN</h3>
+                    <hr>
+                    <p>" CCT pour notre avenir."</p>
+                </div>
+            </div>
+
+            <div class="single-service">
+                <img src="manana1.jpg" >
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Andriamananoro RANDIMBIARISOA</h3>
+                    <hr>
+                    <p>"Ho nosy maintso i Gasikarako , resentsika ilay fiteny hoe nosy mena, 'Ndao."</p>
+                </div>
+            </div>
+           
+        </div>
     </section>
 
 <!-- ::::::: -->
