--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <section id="banner">
-        <img src="WCMdef.png" class="logo" alt="">
+        <img src="WCMdef.png" class="logo">
         <div class="banner-text">
             <h1>Amboaram-Pokonolon'ny Rano</h1>
             <p>Water Cup Madagascar </p>
@@ -24,6 +24,7 @@
         </div>
     </section>
     <div id="sideNav">
+     
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
@@ -39,11 +40,16 @@
                 <li><a href="index10.html">Moramanga</a></li>
             </ul>
         </nav>
+        
     </div>
     <div id="menuBtn">
         <img src="menu4.jpg" id="menu">
 
         <!-- Features -->
+    </div>
+    <div class="container">
+    <img src="BoulesRandom1.png">
+    <img src="BoulesRandom1.png">
     </div>
 <!-- ::::::::::: -->
 <div class="pimg">
